log
Sat Mar 13 23:36:11 UTC 2021: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c:20:1: error: data definition has no type or storage class [-Werror]
 suma(a, b, c);
 ^~~~
exercises.c:20:1: error: type defaults to ‘int’ in declaration of ‘suma’ [-Werror=implicit-int]
exercises.c:20:1: error: parameter names (without types) in function declaration [-Werror]
exercises.c:20:1: error: conflicting types for ‘suma’
exercises.c:14:6: note: previous definition of ‘suma’ was here
 void suma(int a, int b, int * c) {
      ^~~~
exercises.c:21:8: error: expected declaration specifiers or ‘...’ before string constant
 printf("El valor es %d.\n", contador);
        ^~~~~~~~~~~~~~~~~~~
exercises.c:21:29: error: unknown type name ‘contador’
 printf("El valor es %d.\n", contador);
                             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
Sat Mar 13 23:37:11 UTC 2021: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
test.c:250:5: error: redefinition of ‘main’
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:17:5: note: previous definition of ‘main’ was here
 int main(){
     ^~~~
Compilation failed
Sat Mar 13 23:37:28 UTC 2021: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
test.c:250:5: error: redefinition of ‘main’
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:17:5: note: previous definition of ‘main’ was here
 int main(){
     ^~~~
Compilation failed
Sat Mar 13 23:41:44 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3f79870
Sun Mar 14 01:05:50 UTC 2021: 
 exercises.c | 41 ++++++++++++++++++++++++++++++++++-------
 1 file changed, 34 insertions(+), 7 deletions(-)
 tests:  4|3
total_score: 40/70
f7ce56f
Sun Mar 14 01:09:48 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
1adaffc
Sun Mar 14 01:12:50 UTC 2021: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
82fce4c
Sun Mar 14 01:14:42 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|2
total_score: 50/70
8cb2635
Sun Mar 14 01:18:05 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 40/70
074aafc
Sun Mar 14 01:20:28 UTC 2021: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|2
total_score: 50/70
6087be3
Sun Mar 14 01:20:56 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
e388a46
